--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,11 @@
   </properties>
 
   <dependencies>
+      <dependency>
+          <groupId>javax.xml.bind</groupId>
+          <artifactId>jaxb-api</artifactId>
+          <version>2.3.0</version>
+      </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
