--- a/pom.xml
+++ b/pom.xml
@@ -56,12 +56,28 @@
         <version>${jettyVersion}</version>
       </plugin>
       <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>exec-maven-plugin</artifactId>
+          <version>1.2.1</version>
+          <executions>
+              <execution>
+                  <goals>
+                      <goal>java</goal>
+                  </goals>
+              </execution>
+          </executions>
+          <configuration>
+              <mainClass>coms362.cards.webapp.Bootstrap</mainClass>
+          </configuration>
+      </plugin>
+      <plugin>
 		  <groupId>org.apache.maven.plugins</groupId>
 		  <artifactId>maven-compiler-plugin</artifactId>
 		  <version>2.1</version>
 		  <configuration>
 		    <source>1.8</source>
 		    <target>1.8</target>
+        <mainClass>coms362.cards.webapp.Bootstrap</mainClass>
 		  </configuration>
 		</plugin>
     </plugins>
